--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 body {
-  background: #d3cce3; /* fallback for old browsers */
+  background: #ece9e6; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #e9e4f0,
-    #d3cce3
+    #ffffff,
+    #ece9e6
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #e9e4f0,
-    #d3cce3
+    #ffffff,
+    #ece9e6
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
